# To-Do-program

./: .gitignore  README.md  app.py  config.py  dialog.py  drag_list.py  draglist.py  main.py  pyproject.toml  util.py
.github/workflows/: release.yml
src/: __init__.py  app.py  config.py  dialog.py  drag_list.py  util.py
