[project]
name = "todo-program"
version = "0.0.4"
description = "PyQt5 desktop TODO application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.11",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[tool.uv]
package = false
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
